welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not enough arguments for method isFacingTrail: (c: String)Boolean.
Unspecified value parameter c.
    while (isFacingTrail()) {
                        ^